--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ charset = utf-8
 indent_size = 2
 
 # The JSON files contain newlines inconsistently
-[*.{js,json}]
+[*.{js,jsx,json}]
 indent_size = 2
 insert_final_newline = ignore
 
