feat: add frontend app

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
+    "django-react-csrftoken": "^1.0.4",
+    "js": "^0.1.0",
     "parcel": "^1.12.4",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
+    "react": "^15.3.2 || ^16.0.0",
     "react-dom": "^16.13.1",
     "sass": "^1.26.3",
     "stylelint": "^13.3.2",
