chore: rule for isort multiline behaviour

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
 charset = utf-8
+multi_line_output = 3
 
 # Use 2 spaces for the HTML files
 [*.html]
