--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ root = true
 [*.py]
 indent_style = space
 indent_size = 4
+include_trailing_comma = true
 insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
